fix overlapping image component

--- a/client/components/propensity-messaging/_promo-unit.scss
+++ b/client/components/propensity-messaging/_promo-unit.scss
@@ -70,12 +70,6 @@
     top: 0px;
   }
 
-  .promo-unit-msg__best-from-ft-item-overlapping-images {
-    position: relative;
-    height: 217px;
-    width: 435px;
-  }
-
   .promo-unit-msg__best-from-ft-item-overlapping-images.overlapping-images {
     @include center-vertically;
     right: 40px;
@@ -156,11 +150,6 @@
   height: 217px;
   width: 435px;
 
-  .overlapping-images--centered {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .overlapping-images__hind-img {
     height:176.75px;
     width: 314px;
@@ -192,6 +181,11 @@
     }
   }
 }
+
+  .overlapping-images--centered {
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 .thin-container {
   padding: 0px;}
